# AZEY

./: LICENSE
bav-aorta-workflow/: README.md  pyproject.toml  requirements.txt
bav-aorta-workflow/docs/: data_schema.md  workflow_agent.md
bav-aorta-workflow/figures/: README.md
bav-aorta-workflow/scripts/: create_example_records.py  plot_figures.py  run_agent_example.py  run_example.py
bav-aorta-workflow/skills/bav-aorta-prediction/: skill.md
bav-aorta-workflow/src/bav_aorta_workflow/: __init__.py  agent.py  agent_cli.py  cli.py  figure_cli.py  figures.py  pipeline.py  schema.py  skill.py
