[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bav-aorta-workflow"
version = "0.1.0"
description = "Structured echocardiography workflow for BAV aortic dimension estimation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "matplotlib>=3.7",
]

[project.scripts]
bav-aorta-run = "bav_aorta_workflow.cli:main"
bav-aorta-agent = "bav_aorta_workflow.agent_cli:main"
bav-aorta-plot = "bav_aorta_workflow.figure_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
